--- a/SP_1.2/Scripts/Nicola_SR.Rmd
+++ b/SP_1.2/Scripts/Nicola_SR.Rmd
@@ -8,8 +8,6 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
-setwd("C://Users//BAILEYCO//Documents//GitHub//FIA-CN-FSRR-FSAR//SP_1.2")
-
 library(dplyr)
 library(tidyverse)
 library(rstan)
@@ -30,7 +28,7 @@ rstan_options(auto_write=T)
 
 options(mc.cores = parallel::detectCores())
 
-nic_dat <- read.csv("Data_in//nic_dat.csv")
+nic_dat <- read.csv("SP_1.2//Data_in//nic_dat.csv")
 head(nic_dat)
 ```
 
@@ -46,22 +44,24 @@ nic_dat %>% ggplot(aes(x = total_spawners, y = wild_recruits))+
 
 ```{r ricker model}
 
-#creating the list of data to feed to Stan
-dat <- list("N" = nrow(nic_dat),                  #number of years of data
-            "surv" = (logit(nic_dat$smolt_age3_survival) - mean(logit(nic_dat$smolt_age3_survival))) / sd(logit(nic_dat$smolt_age3_survival)), #logit-transformed smolt to age 3 adult survival
-            "lrs" = pull(nic_dat %>% mutate(lrs = log(wild_recruits/total_spawners)) %>% dplyr::select(lrs)),  #log natural origin recruits per spawner (HO & NO)
-            "S" = nic_dat$total_spawners, #vector of total spawner abundance
-            "mlogit_surv" = 0) #mean logit-transformed survival
+# #creating the list of data to feed to Stan
+# dat <- list("N" = nrow(nic_dat),                  #number of years of data
+#             "surv" = (logit(nic_dat$smolt_age3_survival) - mean(logit(nic_dat$smolt_age3_survival))) / sd(logit(nic_dat$smolt_age3_survival)), #logit-transformed smolt to age 3 adult survival
+#             "lrs" = pull(nic_dat %>% mutate(lrs = log(wild_recruits/total_spawners)) %>% dplyr::select(lrs)),  #log natural origin recruits per spawner (HO & NO)
+#             "S" = nic_dat$total_spawners, #vector of total spawner abundance
+#             "mlogit_surv" = 0) #mean logit-transformed survival
+# 
+# #running the Stan model
+# fit <- stan(file = "Scripts/Ricker.stan", data = dat, chains=6,
+#                     iter=10000, cores=6, thin = 1,
+#                     control=list("max_treedepth"=15,"adapt_delta"=0.8),
+#                     pars=c("beta", "alpha", "gamma", "sigma", "surv_est", "nu_Y", "mu_gamma_Y", "nu_rec", "srep", "smsy_85", "smsy", "umsy"))
+# 
+# #fit summary
+# out <- summary(fit)
+# saveRDS(out, "SP_1.2//Results/out.rds")
 
-#running the Stan model
-fit <- stan(file = "Scripts/Ricker.stan", data = dat, chains=6,
-                    iter=10000, cores=6, thin = 1,
-                    control=list("max_treedepth"=15,"adapt_delta"=0.8),
-                    pars=c("beta", "alpha", "gamma", "sigma", "surv_est", "nu_Y", "mu_gamma_Y", "nu_rec", "srep", "smsy_85", "smsy", "umsy"))
-
-#fit summary
-out <- summary(fit)
-saveRDS(out, "Results/out.rds")
+out <- readRDS("SP_1.2//Results/out.rds")
 
 ```
 
